# dagster-project

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bk  setup.cfg  setup.py
dagster_home/.telemetry/: id.yaml
dagster_home/history/: runs.db
dagster_home/history/runs/: 8ba27fe7-d32d-4306-96b0-57ad815ff746.db  index.db
dagster_home/schedules/: schedules.db
mlruns/0/: meta.yaml
mlruns/396996832873759837/: meta.yaml
mlruns/396996832873759837/0ab1f2bdbde7470a858ff613fd56fd48/: meta.yaml
mlruns/396996832873759837/0b51a98dbe9944fa861401f3cef3e2cb/: meta.yaml
mlruns/396996832873759837/0ea9c21791b7436696999b2c7a373b60/: meta.yaml
mlruns/396996832873759837/11d3d32fdb4d460bb9472eaf495640a4/: meta.yaml
mlruns/396996832873759837/122a6973a749469badfa872c6ee01a98/: meta.yaml
mlruns/396996832873759837/17da38b56c714ed79b730eff5d6789f6/: meta.yaml
rec_sys/: assets.py  configs.py  configs.yml  dbt_integration.py  definitions.py  job_training_config.yml
rec_sys.egg-info/: PKG-INFO  SOURCES.txt
rec_sys/assets/: __init__.py  airbyte.py  dbt.py  train_model.py
rec_sys/resources/: __init__.py
rec_sys_tests/: dry_run.py  test_assets.py
tmp_tvawct2/history/: runs.db
tmp_tvawct2/schedules/: schedules.db
tmpfmir_qsu/history/: runs.db
tmpfmir_qsu/schedules/: schedules.db
tmpfmir_qsu/storage/: X_test  X_train  model_metrics  model_stored  model_trained  movie2Idx  movies  preprocessed_training_data  training_data  user2Idx  y_test  y_train
tmppiuay6zz/history/: runs.db
tmppiuay6zz/schedules/: schedules.db
tmppiuay6zz/storage/: scores  users
(+885 files in other folders)
