[tool.poetry]
name = "rec-sys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dagster = "^1.9.3"
pandas = "^2.2.3"
dagster-mlflow = "^0.25.7"
tensorflow = "^2.18.0"
python-dotenv = "^1.0.1"
dagster-airbyte = "^0.25.8"
dagster-dbt = "^0.25.8"
dbt-postgres = "^1.9.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "rec_sys.definitions"
project_name = "rec_sys"